cfn-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation and CLI Services."

Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-minimal-kernel-default-x86_64'
  InstanceType:
    Type: 'String'
    Default: 't2.micro'

Resources:
  WebServer:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      KeyName: firstkey
      UserData:
        Fn::Base64: |
            #! /bin/bash
            dnf update -y
            dnf install git -y
            dnf install python3 -y
            dnf install python3-pip -y
            pip3 install flask
            cd /home/ec2-user
            git clone https://github.com/JayyyJayyyyy/converter-aplication.git
            cd converter-aplication
            chmod +x roman-numerals-converter-app.py
            python3 roman-numerals-converter-app.py

  ServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group for the Web Server and Terminal"
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "tcp"
          FromPort: 80
          ToPort: 80
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22  
      Tags:
        - Key: "Name"
          Value: "Web Server of ${AWS::StackName}"
Outputs:
  webSiteURL:
    Description: URL of website
    Value: !Sub
      - http://${PublicDNS}
      - PublicDNS: !GetAtt WebServer.PublicDnsName
